--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
-	<link rel="stylesheet" href="style.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/main.css" rel="stylesheet">
 	<script src="js.js"></script>
 	<title>मानपुर नगरिया दैनिक समाचार</title>
 	<body>
