--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="navbar-item">
 							<div class="field is-grouped">
 								<p class="control">
-									<a class="button is-danger" href="tel:+919711044855">
+									<a class="button is-danger" href="tel:+919627718670">
 										<span class="icon">
 											<i class="fas fa-phone"></i>
 										</span>
@@ -56,7 +56,7 @@
 						<p class="title"> गाड़ी बुक करने के लिए तुरंत कॉल करें</p>
 						<p class="control">
 							<div class="has-text-centered">	
-							<a class="button is-danger is-large" href="tel:+919711044855">
+							<a class="button is-danger is-large" href="tel:+919627718670">
 								<span class="icon">
 									<i class="fas fa-phone"></i>
 								</span>
@@ -155,9 +155,9 @@
 				<div class="columns is-centered">
 					<div class="column">
 						<h6 class="title">Contact details</h6>
-						<p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> 01234 567890</p>
+						<p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> Call Suryendra at 9627718670</p>
 						<p><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact us</a></p>
-						<p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Street, City, County, Country</p>
+						<p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Manpur Nagaria, India</p>
 					</div>
 					
 					<div class="column">
