--- a/index.html
+++ b/index.html
@@ -55,28 +55,27 @@
 					<p class="title">बाजार भाव जानने और खरीद फरोख्त करने के लिए <p/>
 						<p class="title"> गाड़ी बुक करने के लिए तुरंत कॉल करें</p>
 						<p class="control">
-							<div class="has-text-centered">	
-							<a class="button is-danger is-large" href="tel:+919627718670">
-								<span class="icon">
-									<i class="fas fa-phone"></i>
-								</span>
-								<span>तुरंत कॉल करें!!</span>
-							</a>
-
-						</p>
+							<div class="has-text-centered">
+								<a class="button is-danger is-large" href="tel:+919627718670">
+									<span class="icon">
+										<i class="fas fa-phone"></i>
+									</span>
+									<span>तुरंत कॉल करें!!</span>
+								</a>
+							</p>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- market rates -->
 			<section class="section" id="market">
-								<div class="container">
+				<div class="container">
 					<div class="notification is-info has-text-centered has-text-weight-bold">
 						बाजार भाव
 					</div>
 				</div>
 				<table>
-<!-- 					<caption>बाजार भाव</caption> -->
+					<!-- 					<caption>बाजार भाव</caption> -->
 					<thead>
 						<tr>
 							<th scope="col">वस्तु का नाम</th>
@@ -155,8 +154,8 @@
 				<div class="columns is-centered">
 					<div class="column">
 						<h6 class="title">Contact details</h6>
-						<p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> Call Suryendra at 9627718670</p>
-						<p><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact us</a></p>
+						<p><i class="fa fa-phone fa-lg" aria-hidden="true"></i> WhatsApp or Call Suryendra</p>
+						<p><a class="button is-danger" href="tel:+919627718670"><i class="fa fa-envelope-o" aria-hidden="true"></i> 9627718670</a></p>
 						<p><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> Manpur Nagaria, India</p>
 					</div>
 					
